adding some changes

--- a/project/about.html
+++ b/project/about.html
@@ -15,6 +15,21 @@
 
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
+    <style>
+      .icon {
+        font-size: 200px;
+        padding-bottom: 50px;
+      }
+      .about i {
+        transition: 0.2s ease-in-out;
+      }
+      .about:hover i {
+        transform: rotate(360deg);
+        color: coral;
+        cursor: pointer;
+      }
+    </style>
+
   </head>
 
   <body>
@@ -37,13 +52,13 @@
             <a class="nav-link" href="shop.html">Shop</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Blog</a>
+            <a class="nav-link" href="blog.html">Blog</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="about.html">About Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact Us</a>
+            <a class="nav-link" href="contact.html">Contact Us</a>
           </li>
         </ul>
 
@@ -59,18 +74,44 @@
 
 <!-- about us -->
 
-<section id="featured" class="my-5 py-5">
+<section id="featured" class="banner-about my-5 py-5">
     <div class="container mt-5 py-5">
-        <p>Hello, Dear friends, Welcome to ITech Store also, we are happy you want to know something more about our site</p>
-        <p>So, basically, nowadays people are more dependent on online products and services that's why we also, take forward a step to help you.</p>
-        <p>Our first wish is to provide you with a better solution to solve your problem. So, kindly if you don't get any solution then mention it in the comment section.</p>
-        <p>Also, we are trying to provide fresh & latest content that provides you ideas about all updated information that's happening in the world.</p>
-        <p>In the below section you can get more ideas about our site like our website category and content category.</p>
-        <p>If you have additional questions or require more information about our About Us Page, do not hesitate to contact us through email at <b>Itech@store.com</b></p>
+      <div class="row about-us">
+        <p>Hello, Dear friends, Welcome to ITech Store</p>
+        <p>So, basically, nowadays people are more dependent on online products and <br/> services that's why we also, take forward a step to help you.</p>
+        <p>Our first wish is to provide you with a better solution to solve your problem.<br/>So, kindly if you don't get any solution then mention it in the comment section.</p>
+        <p>Also, we are trying to provide fresh & latest content that provides you ideas<br/>about all updated information that's happening in the world.</p>
+        <p>In the below section you can get more ideas about our site like our website<br/>category and content category.</p>
+        <p>If you have additional questions or require more information about our <br/>Website, do not hesitate to contact us through email at <b>Itech@store.com</b></p>
+    
+      </div>
     </div>
 </section>
 
 <!-- about us -->
+
+<div class="container text-center mt-5 py-5">
+  <h3>Our Company</h3>
+  <hr size="5" class="mx-auto">
+  <p>Business Good Outfit</p>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-lg-6 col-md-6 col-12 about">
+      <div class="text-center">
+        <i class="fa-solid fa-store icon"></i>
+      </div>
+      <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci voluptas similique tempore voluptatem placeat quod iste nulla itaque eos! Laborum, quia labore dolore officia consequuntur harum sunt similique error aspernatur!</p>
+    </div>
+    <div class="col-lg-6 col-md-6 col-12 about">
+      <div class="text-center">
+        <i class="fa-solid fa-bag-shopping icon"></i>
+      </div>
+      <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci voluptas similique tempore voluptatem placeat quod iste nulla itaque eos! Laborum, quia labore dolore officia consequuntur harum sunt similique error aspernatur!</p>
+    </div>
+  </div>
+</div>
 
 
       <!-- footer -->
